--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/favicon.ico">
   <link href="/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>台灣東罐2</title>
+  <title>台灣東罐 Taiwan Tokan Corporation</title>
 </head>
 
 <body>
