--- a/report html template/2-M-011-02-2.6杯身裁切日報表.html
+++ b/report html template/2-M-011-02-2.6杯身裁切日報表.html
@@ -3,18 +3,7 @@
 
 <head>
   <title>2-M-011-02-2.6杯身裁切日報表</title>
-  <style>
-    table {
-      border: 1px solid #6d6d6d;
-      border-collapse: collapse;
-    }
-
-    th,
-    td {
-      border: 1px solid #6d6d6d;
-      padding: 8px 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="./template.css">
 </head>
 
 <body>
@@ -22,102 +11,48 @@
   <table>
     <tbody>
       <tr>
-        <td colspan="2" rowspan="3">5oz</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td colspan="2"></td>
+        <td colspan="2" rowspan="3" align="center" valign="center" style="font-size: 30px;">5oz</td>
+        <td colspan="4" rowspan="2" height="55" align="center" valign="center">
+          <img class="logo" src="../public/img/full_logo.png">
+        </td>
+        <td colspan="2" rowspan="2" valign="bottom">
+          生產日期:
+          <span style="display: inline-block; width: 6.5%;"></span>年
+          <span style="display: inline-block; width: 6.5%;"></span>月
+          <span style="display: inline-block; width: 6.5%;"></span>日，星期
+        </td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td colspan="2">生產日期: 年 月 日，星期</td>
       </tr>
       <tr>
-        <td colspan="4">杯身裁切日報表</td>
-        <td>生產班別：□早班　□中班　□晚班</td>
-        <td></td>
+        <td colspan="4" style="text-align: center;">杯身裁切日報表</td>
+        <td colspan="2">生產班別：
+          <span class="span-check-box active"></span>早班
+          <span class="span-check-box"></span>中班
+          <span class="span-check-box"></span>晚班
+        </td>
       </tr>
       <tr>
         <td colspan="4">操作者:</td>
-        <td colspan="4">號機</td>
+        <td colspan="4" style="text-align: center;">號機</td>
       </tr>
       <tr>
-        <td colspan="4">原紙種類:一般</td>
-        <td colspan="4">原紙種類:FSC</td>
+        <td colspan="4" style="text-align: center; width: 50%;">原紙種類:一般</td>
+        <td colspan="4" style="text-align: center; width: 50%;">原紙種類:FSC</td>
       </tr>
       <tr>
-        <td colspan="4"><span>領編: </span><span>使編: </span><span> </span><span> </span><span> </span><span>
-            米數:</span><span> </span><span>貼標</span><span>:</span><span> </span><span> </span></td>
-        <td colspan="4"><span>領編: 使編: 米數: 貼標:
-          </span><span> </span></td>
-      </tr>
-      <tr>
-        <td>紙捲外觀</td>
-        <td>□良□不良</td>
-        <td>杯內面檢查</td>
-        <td>□良□不良</td>
-        <td>紙捲外觀</td>
-        <td>□良□不良</td>
-        <td>杯內面檢查</td>
-        <td>□良□不良</td>
-      </tr>
-      <tr>
-        <td>杯外面檢查</td>
-        <td>□良□不良</td>
-        <td>毛邊檢查</td>
-        <td>□良□不良</td>
-        <td>杯外面檢查</td>
-        <td>□良□不良</td>
-        <td>毛邊檢查</td>
-        <td>□良□不良</td>
-      </tr>
-      <tr>
-        <td>原紙有無印刷</td>
-        <td colspan="3">□有，產品編號:<span>
-          </span><span>；□無</span></td>
-        <td>原紙有無印刷</td>
-        <td colspan="3">□有，產品編號:<span>
-          </span><span>；□無</span></td>
-      </tr>
-      <tr>
-        <td>始切時間</td>
-        <td></td>
-        <td>完切時間</td>
-        <td></td>
-        <td>始切時間</td>
-        <td></td>
-        <td>完切時間</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>入箱箱號</td>
-        <td>車□未滿</td>
-        <td>車□未滿</td>
-        <td>車□未滿</td>
-        <td>入箱箱號</td>
-        <td>車□未滿</td>
-        <td>車□未滿</td>
-        <td>車□未滿</td>
-      </tr>
-      <tr>
-        <td>入箱數量</td>
-        <td> , PC</td>
-        <td> , PC</td>
-        <td> , PC</td>
-        <td>入箱數量</td>
-        <td> , PC</td>
-        <td> , PC</td>
-        <td> , PC</td>
-      </tr>
-      <tr>
-        <td colspan="4"><span>領編: </span><span>使編: </span><span> </span><span> </span><span> </span><span>
-            米數:</span><span> </span><span>貼標</span><span>:</span><span> </span><span> </span></td>
-        <td colspan="4"><span>領編: 使編: 米數: 貼標:
-          </span><span> </span></td>
+        <td colspan="4">
+          <span style="display: inline-block; width: 23%;" class="fc-red">領編: </span>
+          <span style="display: inline-block; width: 23%;">使編: </span>
+          <span style="display: inline-block; width: 23%;">米數: </span>
+          <span style="display: inline-block; width: 23%;">貼標: </span>
+        </td>
+        <td colspan="4">
+          <span style="display: inline-block; width: 23%;" class="fc-red">領編: </span>
+          <span style="display: inline-block; width: 23%;">使編: </span>
+          <span style="display: inline-block; width: 23%;">米數: </span>
+          <span style="display: inline-block; width: 23%;">貼標: </span>
+        </td>
       </tr>
       <tr>
         <td>紙捲外觀</td>
@@ -169,19 +104,45 @@
       </tr>
       <tr>
         <td>入箱數量</td>
-        <td> , PC</td>
-        <td> , PC</td>
-        <td> , PC</td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
         <td>入箱數量</td>
-        <td> , PC</td>
-        <td> , PC</td>
-        <td> , PC</td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
       </tr>
       <tr>
-        <td colspan="4"><span>領編: </span><span>使編: </span><span> </span><span> </span><span> </span><span>
-            米數:</span><span> </span><span>貼標</span><span>:</span><span> </span><span> </span></td>
-        <td colspan="4"><span>領編: 使編: 米數: 貼標:
-          </span><span> </span></td>
+        <td colspan="4">
+          <span style="display: inline-block; width: 23%;" class="fc-red">領編: </span>
+          <span style="display: inline-block; width: 23%;">使編: </span>
+          <span style="display: inline-block; width: 23%;">米數: </span>
+          <span style="display: inline-block; width: 23%;">貼標: </span>
+        </td>
+        <td colspan="4">
+          <span style="display: inline-block; width: 23%;" class="fc-red">領編: </span>
+          <span style="display: inline-block; width: 23%;">使編: </span>
+          <span style="display: inline-block; width: 23%;">米數: </span>
+          <span style="display: inline-block; width: 23%;">貼標: </span>
+        </td>
       </tr>
       <tr>
         <td>紙捲外觀</td>
@@ -233,49 +194,162 @@
       </tr>
       <tr>
         <td>入箱數量</td>
-        <td> , PC</td>
-        <td> , PC</td>
-        <td> , PC</td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
         <td>入箱數量</td>
-        <td> , PC</td>
-        <td> , PC</td>
-        <td> , PC</td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
       </tr>
       <tr>
-        <td colspan="4">當班一般原紙總裁切數: PC</td>
-        <td colspan="4">當班FSC原紙總裁切數: PC</td>
+        <td colspan="4">
+          <span style="display: inline-block; width: 23%;" class="fc-red">領編: </span>
+          <span style="display: inline-block; width: 23%;">使編: </span>
+          <span style="display: inline-block; width: 23%;">米數: </span>
+          <span style="display: inline-block; width: 23%;">貼標: </span>
+        </td>
+        <td colspan="4">
+          <span style="display: inline-block; width: 23%;" class="fc-red">領編: </span>
+          <span style="display: inline-block; width: 23%;">使編: </span>
+          <span style="display: inline-block; width: 23%;">米數: </span>
+          <span style="display: inline-block; width: 23%;">貼標: </span>
+        </td>
+      </tr>
+      <tr>
+        <td>紙捲外觀</td>
+        <td>□良□不良</td>
+        <td>杯內面檢查</td>
+        <td>□良□不良</td>
+        <td>紙捲外觀</td>
+        <td>□良□不良</td>
+        <td>杯內面檢查</td>
+        <td>□良□不良</td>
+      </tr>
+      <tr>
+        <td>杯外面檢查</td>
+        <td>□良□不良</td>
+        <td>毛邊檢查</td>
+        <td>□良□不良</td>
+        <td>杯外面檢查</td>
+        <td>□良□不良</td>
+        <td>毛邊檢查</td>
+        <td>□良□不良</td>
+      </tr>
+      <tr>
+        <td>原紙有無印刷</td>
+        <td colspan="3">□有，產品編號:<span>
+          </span><span>；□無</span></td>
+        <td>原紙有無印刷</td>
+        <td colspan="3">□有，產品編號:<span>
+          </span><span>；□無</span></td>
+      </tr>
+      <tr>
+        <td>始切時間</td>
+        <td></td>
+        <td>完切時間</td>
+        <td></td>
+        <td>始切時間</td>
+        <td></td>
+        <td>完切時間</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>入箱箱號</td>
+        <td>車□未滿</td>
+        <td>車□未滿</td>
+        <td>車□未滿</td>
+        <td>入箱箱號</td>
+        <td>車□未滿</td>
+        <td>車□未滿</td>
+        <td>車□未滿</td>
+      </tr>
+      <tr>
+        <td>入箱數量</td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
+        <td>入箱數量</td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
+        <td align="right">
+          <span style="display: inline-block; width: 48%;">,</span>
+          <span style="display: inline-block; width: 48%;">PC</span>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="4" style="text-align: center;">
+          當班一般原紙總裁切數:<span style="display: inline-block; width: 35%;"></span>PC
+        </td>
+        <td colspan="4" style="text-align: center;">
+          當班FSC原紙總裁切數:<span style="display: inline-block; width: 35%;"></span>PC
+        </td>
       </tr>
       <tr>
         <td>一般原紙領用卷數:</td>
-        <td></td>
-        <td>卷</td>
-        <td>米</td>
+        <td colspan="3" align="right">
+          <span style="display: inline-block; width: 45%; text-align: right;">卷</span>
+          <span style="display: inline-block; width: 45%; text-align: right;">米</span>
+        </td>
         <td>FSC原紙領用卷數:</td>
-        <td></td>
-        <td>卷</td>
-        <td>米</td>
+        <td colspan="3" align="right">
+          <span style="display: inline-block; width: 45%; text-align: right;">卷</span>
+          <span style="display: inline-block; width: 45%; text-align: right;">米</span>
+        </td>
       </tr>
       <tr>
-        <td colspan="3" rowspan="3">備註與問題回報:</td>
+        <td colspan="3" rowspan="3" valign="top">備註與問題回報:</td>
         <td colspan="2" rowspan="2">狀況處理單位<br><span>□管理□生產□維修</span></td>
-        <td colspan="3" rowspan="3">監控項目:</td>
+        <td colspan="3" rowspan="3" valign="top">監控項目:</td>
       </tr>
       <tr>
       </tr>
       <tr>
         <td colspan="2">處理人員</td>
       </tr>
-      <tr>
-        <td>廠長:</td>
-        <td> 會計:</td>
-        <td> 生管:</td>
-        <td> </td>
-        <td>品管:</td>
-        <td>組長:</td>
-        <td colspan="2">2-M-011-02-2.6 </td>
-      </tr>
     </tbody>
   </table>
+  <div class="flex-between">
+    <span>廠長:</span>
+    <span>會計:</span>
+    <span>生管:</span>
+    <span>品管:</span>
+    <span>組長:</span>
+    <span>2-M-011-02-2.6</span>
+  </div>
 
 </body>
 
