--- a/report html template/2-Q-007-01-2.6生產品質檢驗表.html
+++ b/report html template/2-Q-007-01-2.6生產品質檢驗表.html
@@ -2,37 +2,38 @@
 <html lang="en">
 
 <head>
-  <title>2-M-011-02-2.6杯身裁切日報表</title>
-  <style>
-    table {
-      border: 1px solid #6d6d6d;
-      border-collapse: collapse;
-    }
-
-    th,
-    td {
-      border: 1px solid #6d6d6d;
-      padding: 8px 10px;
-    }
-  </style>
+  <title>2-Q-007-01-2.6生產品質檢驗表</title>
+  <link rel="stylesheet" href="./template.css">
 </head>
 
 <body>
-  <div style="display: flex; align-items: center; justify-content: space-between;">
-    <img src="../public/logo.svg" style="height: 50px;">
-    <div>生產品質檢驗表</div>
-    <div></div>
+
+  <div class="flex-between">
+    <div style="width: 33.3%">
+      <img class="logo" src="../public/img/full_logo.png">
+    </div>
+    <div style="width: 33.3%; display: flex; justify-content: center; align-items: center; font-size: 24px;">生產品質檢驗表
+    </div>
+    <div style="width: 33.3%"></div>
   </div>
-  <div>
-    生產日期:     年     月     日，星期        
-    早。中。晚 班							
-    操作者 :
+  <div class="flex-between">
+    <div>
+      生產日期:
+      <span style="display: inline-block">2024</span>年
+      <span style="display: inline-block">12</span>月
+      <span style="display: inline-block">31</span>日，星期
+      <span style="display: inline-block; margin-right: 20px;">三</span>
+      <span class="span-check-box active"></span>早班
+      <span class="span-check-box"></span>中班
+      <span class="span-check-box"></span>晚班
+    </div>
+    <div style="min-width: 200px;">操作者:</div>
   </div>
-  <div>漏水檢查　檢查數：24個			每4小時測漏一次，特殊品項每兩小時測漏一次。</div>
+  <div>漏水檢查　檢查數：24個 每4小時測漏一次，特殊品項每兩小時測漏一次。</div>
   <table>
     <tbody>
       <tr>
-        <td rowspan="2" align="center">機號</td>
+        <td rowspan="2" align="center" width="100">機號</td>
         <td rowspan="2" align="center">檢查時間</td>
         <td rowspan="2" align="center">檢查結果</td>
         <td colspan="4" align="center">漏水部位</td>
@@ -48,45 +49,45 @@
 
       <!-- 單一台機器 -->
       <tr>
-        <td rowspan="4">1號機</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td rowspan="4" align="center">1號機</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
       </tr>
 
     </tbody>
@@ -95,7 +96,7 @@
   <table>
     <tbody>
       <tr>
-        <td rowspan="2" align="center">機號</td>
+        <td rowspan="2" align="center" width="100">機號</td>
         <td rowspan="2" align="center">檢查時間</td>
         <td colspan="3" align="center">尺寸</td>
         <td rowspan="2" align="center">外觀</td>
@@ -108,7 +109,7 @@
 
       <!-- 單一台機器 -->
       <tr>
-        <td rowspan="4">1號機</td>
+        <td rowspan="4" align="center">1號機</td>
         <td></td>
         <td></td>
         <td></td>
@@ -122,7 +123,7 @@
   <table>
     <tbody>
       <tr>
-        <td align="center">機號</td>
+        <td align="center" width="100">機號</td>
         <td align="center">檢查時間</td>
         <td align="center">印字正常</td>
         <td align="center">印刷外觀正常</td>
@@ -134,7 +135,7 @@
 
       <!-- 單一台機器 -->
       <tr>
-        <td rowspan="4">1號機</td>
+        <td rowspan="4" align="center">1號機</td>
         <td></td>
         <td></td>
         <td></td>
@@ -145,7 +146,7 @@
       </tr>
     </tbody>
   </table>
-  <div>
+  <div class="flex-between">
     <span>廠長 :</span>
     <span>品管 :</span>
     <span>品檢:</span>
