--- a/report html template/2-M-011-02-2.6杯身裁切日報表.html
+++ b/report html template/2-M-011-02-2.6杯身裁切日報表.html
@@ -28,7 +28,7 @@
         <td colspan="4" style="text-align: center;">杯身裁切日報表</td>
         <td colspan="2">生產班別：
           <span class="span-check-box active"></span>早班
-          <span class="span-check-box"></span>中班
+          <span class="span-check-box"></span>午班
           <span class="span-check-box"></span>晚班
         </td>
       </tr>
