--- a/report html template/2-Q-007-01-2.6生產品質檢驗表.html
+++ b/report html template/2-Q-007-01-2.6生產品質檢驗表.html
@@ -24,7 +24,7 @@
       <span style="display: inline-block">31</span>日，星期
       <span style="display: inline-block; margin-right: 20px;">三</span>
       <span class="span-check-box active"></span>早班
-      <span class="span-check-box"></span>中班
+      <span class="span-check-box"></span>午班
       <span class="span-check-box"></span>晚班
     </div>
     <div style="min-width: 200px;">操作者:</div>
